syntax = "proto3";

package teonyx.master;
import "google/protobuf/timestamp.proto";
import "proto/contracts/vehiclecontract.proto";
import "google/protobuf/empty.proto";


service FleetService{
    rpc CreateFleet(RequestFleet) returns(ResponseCreateSuccess)
    rpc UpdateFleet(RequestFleet) returns(ResponseSuccess)
    rpc DeleteFleet(RequestDelete) returns(ResponseSuccess)
    rpc GetFleetById(RequestKey) returns(ResponseFleet)
    rpc CreateFleetContact(RequestFleetContact) returns(ResponseCreateSuccess)
    rpc UpdateFleetContact(RequestFleetContact) returns(ResponseSuccess)
    rpc DeleteFleetContact(RequestDelete) returns(ResponseSuccess)
    rpc GetContactByFleetId(RequestKey) returns(ResponseFleetContact)
    rpc CreateFleetLocation(RequestFleetLocation)returns(ResponseCreateSuccess)
    rpc UpdateFleetLocation(RequestFleetLocation)returns(ResponseSuccess)
    rpc DeleteFleetLocation(RequestDelete)returns(ResponseSuccess)
    rpc GetLocationByFleetId(RequestKey) returns(ResponseFleetLocation)
}